2023-10-06  Niels Möller  <nisse@lysator.liu.se>

	* misc/c89: New wrapper script to force compiling in c89 mode.

2023-10-04  Niels Möller  <nisse@lysator.liu.se>

	* bswap-internal.h (bswap32_if_be, bswap32_if_le): New macros.
	* blowfish-bcrypt.c (bswap32_if_le_n): Rename, to not collide with
	new macro.
	(bswap32_if_le): ... old name, deleted.
	* umac-set-key.c (bswap32_if_le_n): Define in the same way as for
	bcrypt, replacing...
	(BE_SWAP32_N): ...deleted macro.
	* umac-l3.c (_nettle_umac_l3_init): Use bswap64_if_le.
	* umac-l2.c (_nettle_umac_l2_init): Use bswap32_if_le.
	* chacha-core-internal.c (_nettle_chacha_core): Use bswap32_if_be.
	* salsa20-core-internal.c (_nettle_salsa20_core): Likewise

	* umac-l2.c (_nettle_umac_l2_final): Delete redundant assignment.

2023-10-03  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (check-fat): Reduce tests to run to TS_FAT, to speed
	up tests.

	* testsuite/Makefile.in (TS_FAT): Define list of tests relevant
	for testing algorithm variants in fat builds.

	* testsuite/ecc-mod-arith-test.c: Reduce test count, aiming to get
	test to complete in roughly 0.1s.
	* testsuite/ecc-mod-test.c: Likewise.
	* testsuite/ecc-modinv-test.c: Likewise.
	* testsuite/ecc-mul-a-test.c: Likewise.
	* testsuite/ecc-redc-test.c: Likewise.
	* testsuite/ecc-sqrt-test.c: Likewise.
	* testsuite/eddsa-compress-test.c: Likewise.
	* testsuite/poly1305-test.c: Likewise.
	* testsuite/random-prime-test.c: Likewise.
	* testsuite/rsa-compute-root-test.c: Likewise.
	* testsuite/rsa-sec-decrypt-test.c: Likewise.

	* testsuite/Makefile.in (TS_SH): Delete tools tests from list.
	* tools/Makefile.in (check): Run tools tests from this target.
	(TS_ALL): New variable.
	(DISTFILES): Add TS_ALL files.
	* testsuite/teardown-env: Deleted, intead let make clean delete
	test files.
	* tools/nettle-pbkdf2-test: Moved, from testseuite/.
	* tools/sexp-conv-test: Likewise.
	* tools/pkcs1-conv-test: Likewise.

2023-08-05  Niels Möller  <nisse@lysator.liu.se>
